--- a/pages/index.css
+++ b/pages/index.css
@@ -22,5 +22,7 @@
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__list-item/intro__list.css);
 @import url(../blocks/intro/__list-item-numeric/intro__list-item-numeric.css);
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
 
 
