--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,28 +1,25 @@
 .intro {
     max-width: 984px;
     width: 100%;
-    margin: 0 auto;
+    margin: 92px auto 0 auto;
     display: flex;
-    padding: 92px 0 0 0;
 }
 
-@media screen and (max-width: 1024px){
-  .intro{
+@media screen and (max-width: 1024px) {
+  .intro {
     max-width: calc(100% - 48px*2);
   }
 }
 
-@media screen and (max-width:768px){
-  .intro{
+@media screen and (max-width:768px) {
+  .intro {
     max-width: 100%;
-    padding-top: 88px;
+    margin-top: 88px;
   }
 }
 
-@media screen and (max-width:440px){
-  .intro{
-    padding-top: 64px;
+@media screen and (max-width:440px) {
+  .intro {
+    margin-top: 64px;
   }
 }
-
-  
