--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,11 +4,10 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  border: 1px blue solid;
 }
 
 @media screen and (max-width: 680px) {
   .place__website {
-    margin-left: 16px;
+    margin: 32px 0 0 16px;
   }
 }
