--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,6 +3,8 @@
     width: 100%;
     margin: 92px auto 0 auto;
     display: flex;
+    flex-direction: column;
+    gap: 80px;
   }
   
   @media screen and (max-width: 1024px) {
@@ -13,13 +15,14 @@
   
   @media screen and (max-width: 768px) {
     .places {
-      max-width: 100%;
+      max-width: calc(100% - 24px*2);
       margin-top: 88px;
+      gap: 73px;
     }
   }
   
   @media screen and (max-width: 440px) {
     .places {
-      margin-top: 64px;
+      gap: 64px;
     }
   }
