--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,6 +7,12 @@
   line-height: 1.06;
 }
 
+@media screen and (max-width: 980px) {
+  .place__title {
+    font-size: 56px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .place__title {
     font-size: 42px;
