--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 @import url(../vendor/normalize.css);
-@import url(../blocks/root/root.css);
 @import url(../vendor/fonts/fonts.css);
+@import url(../blocks/root/root.css);
 @import url(../blocks/list/list.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
@@ -33,5 +33,7 @@
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__description/place__description.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
-
-
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__link/cover__link.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
