--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -4,4 +4,10 @@
   line-height: 1.22;
   text-decoration-line: underline;
   color: #FFF;
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.place__link:hover {
+  opacity: 0.8;
 }
