--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -7,14 +7,14 @@
 }
 
 @media screen and (max-width: 768px) {
-  .place__pharagraph {
+  .place__paragraph {
     max-width: 352px;
     font-size: 16px;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .place__pharagraph {
+  .place__paragraph {
     max-width: 288px;
   }
 }
