--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,6 +1,6 @@
 .cover__link {
   width: 100%;
-  background-color: #2A2C2F50;
+  background-color: #2A2C2F30;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,10 +12,16 @@
 
 .cover__link:hover:before {
   content: "";
-  background-color: #2A2C2F;
+  background-color: #2A2C2F80;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   position: absolute;
+}
+
+@media screen and (max-width: 320px) {
+  .cover__link {
+    padding: 0;
+  }
 }
