--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -16,3 +16,17 @@
   margin-left: 0px;
   padding-top: calc(740 / 1184 * 100%);
 }
+
+@media screen and (max-width: 320px) {
+  .cover {
+    margin-top: 90px;
+  }
+}
+
+
+@media screen and (max-width: 320px) {
+  .cover {
+    max-width: 320px;
+    margin-top: 66px;
+  }
+}
