--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -23,6 +23,8 @@
 
 @media screen and (max-width: 440px) {
   .places {
-    gap: 64px;
+    max-width: 100%;
+    margin-top: 64px;
+    gap: 50px;
   }
 }
