--- a/blocks/intro/__content/intro__content.css
+++ b/blocks/intro/__content/intro__content.css
@@ -14,9 +14,15 @@
     }
   }
   
-  @media screen and (max-width: 440px){
+  @media screen and (max-width: 680px) {
+    .intro__content {
+      max-width: 100%;
+      margin: 0 16px;
+    }
+  }
+  
+  @media screen and (max-width: 320px){
     .intro__content{
       max-width: 288px;
-      margin: 0 16px;
     }
   }
