--- a/blocks/link/link.css
+++ b/blocks/link/link.css
@@ -1,7 +1,7 @@
 .link {
   text-decoration: none;
   opacity: 1;
-  transition: opacity 1s linear 0.5s;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .link:hover {
